2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomCecilMethod.cs,
	  MonoDevelop.Projects.Dom/DomCecilEvent.cs,
	  MonoDevelop.Projects.Dom/DomCecilField.cs,
	  MonoDevelop.Projects.Dom/DomCecilProperty.cs,
	  MonoDevelop.Projects.Dom/DomCecilType.cs,
	  MonoDevelop.Projects.Dom/DomCecilAttribute.cs: Worked on cecil
	  layer/extension methods are now recognized.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: fixed anonymous type
	  bug.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Output/OutputFlags.cs,
	  MonoDevelop.Projects.Dom.Output/Ambience.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/IMethod.cs,
	  MonoDevelop.Projects.Dom/DomMethod.cs,
	  MonoDevelop.Projects.Dom/IType.cs,
	  MonoDevelop.Projects.Dom/AbstractMember.cs: Added support for C#3.0
	  extension methods.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomRegion.cs,
	  MonoDevelop.Projects.Dom/Comment.cs,
	  MonoDevelop.Projects.Dom/DomLocation.cs: Marked some classes as
	  serializable (for tag comment saving).

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/CommentTasksChangedEventHandler.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs,
	  MonoDevelop.Projects.Dom/Comment.cs,
	  MonoDevelop.Projects.Dom/Tag.cs,
	  MonoDevelop.Projects.Dom.Serialization/DatabaseProjectDom.cs,
	  MonoDevelop.Projects.Dom.Serialization/FileEntry.cs,
	  MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Worked on tag comments.

2008-09-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionItem.cs: Stop compilation when errors
	  are found.
	* MonoDevelop.Projects/Workspace.cs: Improved progress reporting of
	  build and other operations.
